# Calibration_challenge

./: .gitignore  README.md  index.md  pyproject.toml
data/inputs/: project_constants.json
src/: colinearity_optimization.py  colinearity_optimization_parallel.py  conversion.py  convert_to_float16.py  debug_frames.py  fix_predictions.py  flow.py  flow_filter.py  generate_flows.py  ground_truth.py  main.py  make_predictions.py  segmentation.py  visualize_error.py  visualize_flow.py
src/core/: README.md  colinearity_optimization.py  colinearity_optimization_parallel.py  collinearity_scorer_batch.py  collinearity_scorer_sample.py  flow.py  flow_filter.py  interactive_viewer.py  optimizers.py  predictions_from_flows.py  rendering.py
src/draft/: analyze_precision.py  convert_to_mlx.py  test_gradient_descent.py  vmap_matrix_comparison.py
src/draft/05-25/: debug_batch_vs_sequential.py  evaluate_batch_optimization.py  test_batch_optimization.py  test_no_filter.py  (+5 more)
src/experiments/: README.md
src/notebooks/: optimisation_filtrage.ipynb  test.ipynb  test_gradient_descent.ipynb
src/production/: config.json  make_predictions.py
src/unit_tests/: test_collinearity_scorer.py  test_flow_filter.py
src/utilities/: README.md  convert_to_float16.py  create_mixed_batch.py  eval.py  extract_means.py  filter_config_evaluator.py  fix_predictions.py  generate_flows.py  ground_truth.py  heatmap_generator.py  heatmap_loader.py  load_flows.py  load_mean_point.py  load_predictions.py  load_video_frame.py  paths.py  pixel_angle_converter.py  project_constants.py  worst_errors.py
(+25 files in other folders)
