[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calib-challenge"
version = "0.1.0"
description = "Calibration challenge for camera pitch/yaw prediction"
authors = [{name = "Hugo Vaillaud"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "opencv-python",
    "pathlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "." 